feat: Implement role-based navigation visibility and update branding and text in the admin sidebar.